--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 vis_sample - Python Package for visibility sampling
+    Forked from [AstroChem/vis_sample](https://github.com/AstroChem/vis_sample) and updated to Python 3.7
 ====================================================
 
   Purpose:
