--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 vis_sample - Python Package for visibility sampling
-    Forked from [AstroChem/vis_sample](https://github.com/AstroChem/vis_sample) and updated to Python 3.7
+    Forked from https://github.com/AstroChem/vis_sample and updated to Python 3.7
 ====================================================
 
   Purpose:
